--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto = create
-spring.datasource.url = jdbc:mysql://localhost:3306/lighthouse
+spring.datasource.url = jdbc:mysql://localhost:3306/post
 spring.datasource.username = root
-spring.datasource.password = 12341234
+spring.datasource.password = 1234
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 
 spring.jpa.show-sql = true
