--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto = create
-spring.datasource.url = jdbc:mysql://localhost:3306/post
+spring.datasource.url = jdbc:mysql://localhost:3306/lighthousepost
 spring.datasource.username = root
 spring.datasource.password = 1234
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
@@ -7,3 +7,7 @@ spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql = true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_sql = true
+
+#파일 용량 최대 100MB 설정
+spring.servlet.multipart.maxFileSize=100MB
+spring.servlet.multipart.maxRequestSize=100MB
