--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,8 @@ out/
 
 ### VS Code ###
 .vscode/
+
+### my ignore ###
+src/main/resources/application.yml
+src/main/resources/application.properties
+application.yml
